--- a/binary-builds/php7-builds.yml
+++ b/binary-builds/php7-builds.yml
@@ -1,2 +1,10 @@
 ---
-php7: []
+php7:
+- version: 7.0.15
+  md5: d7a61db093aac4a3f9a97b0916becd50
+- version: 7.0.14
+  md5: 5e20062f39fb3bd5afeed916866acad9
+- version: 7.1.0
+  md5: ec2218f97b4edbc35a2d7919ff37a662
+- version: 7.1.1
+  md5: 7c565ddf31d69dbc19027e51b6968b79
